--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "http-proxy-middleware": "^1.0.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
